test/runnable/extra-files/test17619.d
void foo()
{
    foreach (i; 0 .. 3)
        i++;

    int bad; // shown during loop
}
