test/fail_compilation/fail279.d
template Template(int i) {
 	    mixin Template!(i+1);
} 	
mixin Template!(0);
